fix link contrast ratio in light mode

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 [data-theme="light"] {
-    --link: #3d78c0;
+    --link: #0000ff;
     --bg: #f5f5f5;
     --fg: #111;
     --code-fg: #1e2229;
